# compression_alg

./: .gitignore  CMakeLists.txt  Makefile  README.md  compr_alg  compr_alg.c  compr_alg.h  libdeflate_alg.c  libdeflate_alg.h  lz4_alg.c  lz4_alg.h  main.c  zlib_alg.c  zlib_alg.h  zstd_alg.c  zstd_alg.h
data/: pg_hba.conf  postgresql.auto.conf  postgresql.conf  postmaster.opts
data/base/1/: 1247_vm  1249  1255  1255_fsm  1255_vm  1259  13422  13423_vm  13428_fsm  13432  13433_vm  13437  2187  2228  2579  2600  2603  2605_fsm  2605_vm  2606  2606_vm  2607_fsm  2608_vm  2609_fsm  2616  2616_vm  2617  2618_fsm  2619  2619_fsm  2653  2657  2659  2660  2663  2666  2667  2668  2679  2683  (+39 more)
data/base/4/: 1247  1249_fsm  1259  1259_vm  13428  174  175  2601_fsm  2602  2602_fsm  2602_vm  2603_fsm  2605  2607  2608_fsm  2609  2610  2610_vm  2612_fsm  2612_vm  2615_fsm  2616_fsm  2617_vm  2618_vm  2650  2651  2652  2656  2664  2670  2674  2680  2682  2686  2687  2689  2690  2692  2693  2699  (+45 more)
data/base/5/: 112  113  1247_fsm  1249  1249_vm  1259_fsm  13418  13418_fsm  13418_vm  13423  13423_fsm  13427  13428_vm  13433  13433_fsm  2337  2600_fsm  2600_vm  2601  2601_vm  2603_vm  2606_fsm  2607_vm  2608  2609  2609_vm  2610_fsm  2612  2615  2615_vm  2617_fsm  2618  (+57 more)
data/global/: 1213  1213_fsm  1213_vm  1232  1233  1260  1260_fsm  1260_vm  1261  1261_fsm  1261_vm  1262  1262_fsm  1262_vm  2396  2396_fsm  2396_vm  2397  2671  2672  2676  2677  2694  2695  2697  2698  2847  2965  2967  3593  4061  4176  4178  4182  4184  4186  6001  6002  6114  6115  (+14 more)
view/: analysis.py  results.csv
